src/App.css
/* * {
    margin: 0%;
    width: 100%;
} */

body {
    margin: 0%;
    background-color: rgb(255, 251, 246);
    cursor: url('cursor_arrow.png'), auto;
}

a,
button,
[role="button"],
.clickable {
    cursor: url('cursor_hand.png'), pointer;
}

p,
span,
h1,
h2,
h3,
h4,
h5,
h6,
li {
    cursor: url('cursor_ibeam.png'), text;
}

.page {
    margin-right: 5%;
}

.menu-closed {
    height: 100%;
    background-color: rgb(255, 251, 246);
    font-family: Arial, Helvetica, sans-serif;
    margin-right: 5%;
    width: 100%;
}

.hamburger-click-area {
    display: none;
    position: fixed;
    top: 20px;
    right: 20px;
    z-index: 999;
    cursor: pointer;
}

.hamburger {
    width: 28px;
    height: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.hamburger i {
    display: block;
    width: 100%;
    height: 3px;
    background-color: black;
    border-radius: 2px;
}

.nav-link {
    text-decoration: none !important;
    font-size: 13px;
    font-style: normal;
    font-weight: bold;
    line-height: 13px;
}

.nav-link .contact {
    color: #2e2e2e !important;
}

.navigation {
    height: 90vh;
    /* border-radius: 25px; */
    width: 25%;
    position: fixed;
}

.works {
    width: 70%;
    float: right;
    height: 100vh;
    display: flex;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 3%;
}

.helloMessage {
    padding: 5%;
    margin-top: 10vh;
    text-align: center;
}

.helloMessage img {
    width: 100px;
}

.main {
    width: 100%;
    display: flex;
    height: 100vh;
    flex-direction: column;
}

nav {
    align-items: center;
    text-align: center;
}

.navigation a {
    color: black;
    margin: 20px;
    padding-left: 10%;
    display: flex;
    overflow: hidden;
    background-color: none;
    border: none;
    flex-wrap: nowrap;
}

.content {
    width: 75%;
    margin-left: 25%;
    display: flex;
    flex-wrap: wrap;
    justify-content: cener;
    overflow: visible;
    padding-top: 5vh;
    /* margin: 0 auto; */
    gap: 1%;
}

.project-cover {
    width: 330px;
    display: flex;
    flex-direction: column;
    gap: 1%;
    /* margin-right: 1%;
    margin-left: 1%; */
    padding-left: 0;
}

.cover-image-wrap {
    width: 100%;
    margin-bottom: 10px;
}

.projects:nth-child(3n + 1) {
    clear: left;
    margin-left: 5%;
}

.cover__img {
    border-radius: 5px;
    width: 100%;
}

.details-wrap {
    padding-bottom: 9%;
}

.title {
    color: rgb(34, 34, 34);
    float: none;
    font-family: helvetica, sans-serif;
    font-size: 14px;
    font-style: normal;
    font-weight: bold;
    line-height: 18px;
    margin: auto;
    padding: 0px 0% 5px;
    text-align: center;
    width: 90%;
}

.description {
    color: rgb(153, 153, 153);
    float: none;
    font-family: helvetica, sans-serif;
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: 17px;
    margin: auto;
    padding: 2px 0% 10px;
    text-align: center;
    text-transform: none;
    width: 90%;
}

.nav-contacts {
    display: flex;
    flex-direction: row;
    padding: 0%;
    margin: 20px;
    padding-left: 10%;
    width: 50%;
}

.nav-contacts a {
    text-decoration: none !important;
    color: black;
    padding: 0%;
    margin: 0% !important;
    margin-right: 20px !important;

}

::-webkit-scrollbar {
    display: none;
}

.project-title,
a:link {
    text-decoration: none !important;
}

hr {
    border: 1px solid rgb(124, 19, 19);
}

iframe {
    height: 777px;
    margin-bottom: 2%;
}

.currently-on {
    color: brown !important;
    font-weight: 900;
}

.back-to-top {
    border: none;
    background-color: transparent;
    margin: auto;
    font-size: larger;
    padding-bottom: 10px;
    color: gray;
}

@media screen and (max-width: 1418px) {
    .project-cover {
        /* 1629px */
        width: 32.66%;
    }
}

@media screen and (max-width: 933px) {
    .project-cover {
        /* 1629px */
        width: 45%;
    }
}

@media screen and (max-width: 777px) {
    .page {
        margin: 0%;
    }

    .content {
        margin: auto;
    }

    iframe {
        height: 777px;
    }

    .project-cover {
        width: 100%;
    }

    .navigation {
        display: none;
    }

    .works {
        width: 100%;
    }

    .projects:nth-child(3n + 1) {
        clear: left;
        margin-left: 5%;
        margin-right: 5%;
    }

    .navigation {
        position: fixed;
        left: 0;
        top: 0;
        width: 70%;
        height: 100vh;
        background: white;
        z-index: 999;
    }

    .hamburger-click-area {
        display: inline;
    }
}

